--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "create-react-class": "^15.6.3",
+    "literallycanvas": "^0.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dom-factories": "^1.0.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
