--- a/api/pom.xml
+++ b/api/pom.xml
@@ -18,7 +18,39 @@
 		<java.version>11</java.version>
 	</properties>
 
+
+
+
+
 	<dependencies>
+
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client-jetty</artifactId>
+      <version>1.23.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client-jetty</artifactId>
+      <version>1.30.6</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-gmail</artifactId>
+      <version>v1-rev110-1.25.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-jackson2</artifactId>
+      <version>1.30.9</version>
+    </dependency>
+
+  <dependency>
+    <groupId>com.google.api-client</groupId>
+    <artifactId>google-api-client-java6</artifactId>
+    <version>1.30.9</version>
+  </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
