--- a/client/package.json
+++ b/client/package.json
@@ -7,20 +7,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
     "create-react-class": "^15.6.3",
     "file-saver": "^2.0.2",
     "firebase": "^7.15.5",
     "firebase-admin": "^8.12.1",
+    "jquery": "^3.5.1",
     "literallycanvas": "^0.5.2",
+    "popper.js": "^1.16.1",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-dom-factories": "^1.0.2",
+    "react-google-login": "^5.1.20",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "bootstrap": "^4.5.0",
-    "react-bootstrap": "^1.0.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
