--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-google-login": "^5.1.20",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "recompose": "^0.30.0",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.5"
   },
