--- a/client/client.yml
+++ b/client/client.yml
@@ -6,8 +6,13 @@ automatic_scaling:
   min_pending_latency: automatic
   max_pending_latency: automatic
 handlers:
-- url: /
-  static_files: build/index.html
-  upload: build/index.html
-- url: /
-  static_dir: build
+  - url: /static
+    static_dir: build/static
+
+  - url: /(.*\.(json|ico|js))$
+    static_files: build/\1
+    upload: build/.*\.(json|ico|js)$
+
+  - url: .*
+    static_files: build/index.html
+    upload: build/index.html
