--- a/api/pom.xml
+++ b/api/pom.xml
@@ -54,6 +54,11 @@
       <version>1.6.2</version>
     </dependency>
     <dependency>
+      <groupId>com.sendgrid</groupId>
+      <artifactId>sendgrid-java</artifactId>
+      <version>4.6.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.googlecode.json-simple</groupId>
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
