add fabric context

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "canvas": "^2.6.1",
     "create-react-class": "^15.6.3",
+    "fabric": "^3.6.3",
     "file-saver": "^2.0.2",
     "firebase": "^7.15.5",
     "jquery": "^3.5.1",
