--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 HELP.md
-config.json
+service_account.json
+cors.json
 target/
+gcloud.properties
+client-deploy.yml
+.env
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
+!**/src/main/java/**
 !**/src/test/**
 
 ### STS ###
@@ -53,6 +57,6 @@ functions/node_modules/*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-credentials.json
+gmail_credentials.json
 oauth.sh
 output.json
