--- a/client/client.yml
+++ b/client/client.yml
@@ -5,6 +5,15 @@ automatic_scaling:
   max_idle_instances: automatic
   min_pending_latency: automatic
   max_pending_latency: automatic
+env_variables:
+  REACT_APP_apiKey:
+  REACT_APP_authDomain:
+  REACT_APP_databaseURL:
+  REACT_APP_projectId:
+  REACT_APP_storageBucket:
+  REACT_APP_messagingSenderId:
+  REACT_APP_appId:
+  REACT_APP_measurementId:
 handlers:
   - url: /static
     static_dir: build/static
